// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. tile a 1`] = `
<Link>
  <div>
    <div>
      <div>
        ROYALS
      </div>
    </div>
    <h3
      aria-level="3"
      role="heading"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </h3>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
  </div>
  <div>
    <Image
      aspectRatio={1.7777777777777777}
      uri="https://img/someImage"
    />
  </div>
</Link>
`;

exports[`2. tile b 1`] = `
<Link>
  <div>
    <div>
      <div>
        ROYALS
      </div>
    </div>
    <h3
      aria-level="3"
      role="heading"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </h3>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
    <div>
      <span>
        
        The 
        <span>
          Duke of Edinburgh
        </span>
         could be charged with driving without due care and attention after his car accident yesterday
        ...
      </span>
    </div>
  </div>
</Link>
`;

exports[`3. tile c 1`] = `
<Link>
  <div>
    <Image
      aspectRatio={1.7777777777777777}
      uri="https://img/someImage"
    />
  </div>
  <div>
    <div>
      <div>
        ROYALS
      </div>
    </div>
    <h3
      aria-level="3"
      role="heading"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </h3>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
  </div>
</Link>
`;

exports[`4. tile d 1`] = `
<Link>
  <div>
    <div>
      <Image
        aspectRatio={1.5}
        uri="https://img/someImage"
      />
    </div>
    <div>
      <div>
        <div>
          ROYALS
        </div>
      </div>
      <h3
        aria-level="3"
        role="heading"
      >
        Prince Philip ‘could be prosecuted’ over car crash
      </h3>
      <ArticleFlags
        flags={
          Array [
            "NEW",
          ]
        }
      />
    </div>
  </div>
</Link>
`;

exports[`5. tile e 1`] = `
<Link>
  <div>
    <div>
      <Image
        aspectRatio={0.8}
        uri="http://image.io/4by5"
      />
    </div>
    <div>
      <div>
        <div>
          ROYALS
        </div>
      </div>
      <h3
        aria-level="3"
        role="heading"
      >
        Prince Philip ‘could be prosecuted’ over car crash
      </h3>
      <ArticleFlags
        flags={
          Array [
            "NEW",
          ]
        }
      />
    </div>
  </div>
</Link>
`;
